# bindingdb-activity-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/metrics/: egfr_logreg_morgan.json  egfr_model_comparison.csv  egfr_results.csv  egfr_results_random.csv  egfr_results_scaffold.csv  top_scaffolds.csv
scripts/: analyze_scaffolds.py  build_egfr_dataset.py  compare_models.py  plot_chemical_space.py  plot_model_curves.py  train.py  train_baseline.py
src/bindingdb_activity_prediction/: data.py  dataset.py  evaluation.py  featurization.py  models.py  plotting.py  splits.py
src/bindingdb_activity_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
