[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bindingdb-activity-prediction"
version = "0.1.0"
description = "Reproducible baseline ML pipeline for target-specific molecular activity prediction from BindingDB-refined data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gian Marco Tuveri" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
  "matplotlib>=3.8",
  "scipy>=1.12",
  "rdkit",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.3",
  "ipykernel>=6.29",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
